--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -36,7 +36,7 @@
 </div>
 
 </body>
-<script src="./js/jquery.min.js"></script>
+<script src="./js/jquery-3.2.1.min.js"></script>
 <script src="./js/simple.js"></script>
 <script type="text/javascript">
     $(function () {
@@ -131,46 +131,7 @@
 
         })
 
-    //登录事件
-    $('#login').on('click',function(){
-        console.log('开始登录');
-        console.log($('#act').val().trim(),'账号');
-        console.log($('#pwd').val().trim(),'密码');
-        if($('#act').val().trim() == ''){
-            alert('请输入账号');
-            return;
-        }else if($('#pwd').val().trim() == ''){
-            alert('请输入密码');
-            return;
-        }
-        $.ajax({
-             type: "POST",
-             url: "https://www.maaee.com/Excoord_For_Education/webservice",
-             data: {
-                   params:JSON.stringify({
-                       "method":"login",
-                       "username":$('#act').val().trim(),
-                       "password":$('#pwd').val().trim()
-                   })
-             },
-             header:{
-                 "content-type":"application/x-www-form-urlencoded;charset=UTF-8"
-             },
-             success: function(data){
-                 var res = JSON.parse(data);
-                 console.log(res);
-                 if(res.success){
-                     console.log('登录成功');
-                     window.location.href = 'syncClassroom.html?teacherId='+res.response.colUid+'&teacherName='+res.response.userName+'';
 
-                 }else{
-                     alert('用户不存在');
-                 }
-             },
-             error: function(e){
-                 console.log(e);
-             }
-        });
         //创建uuid
         function createMachineId() {
             var s = [];
