--- a/public/schoolClass/videoSourceInClass.html
+++ b/public/schoolClass/videoSourceInClass.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
- <video width="320px" height="240px" autoplay id="preview_video" muted></video>
+ <video width="230px" height="127px" autoplay class="preview_video" id="preview_video" muted></video>
 
 </body>
 
