--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -30,7 +30,8 @@
             <div>打开手机小蚂蚁教师端扫一扫</div>
         </div>
 
-
+        <!--下载客户端 -->
+        <a href="" class="downPc">下载PC客户端</a>
     </div>
 
 </div>
