--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -15,6 +15,7 @@
             background-color: #ECEFF8;
             overflow: hidden;
             height: 100%;
+            font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
         }
         .layui-layer-shade{
             opacity: 0.5 !important;
