--- a/public/schoolClass/joinDialog.html
+++ b/public/schoolClass/joinDialog.html
@@ -89,7 +89,7 @@
             background-color: #0084FF;
             color: #fff;
             font-size: 16px;
-            padding: 9px 0;
+            line-height: 42px;
             -webkit-border-radius: 2px;
             -moz-border-radius: 2px;
             border-radius: 2px;
