--- a/public/schoolClass/openUnionClass.html
+++ b/public/schoolClass/openUnionClass.html
@@ -8,7 +8,10 @@
     <script type="application/javascript" src="js/service.js"></script>
     <script type="application/javascript" src="js/platform.js"></script>
     <style>
-
+        body,html{
+            margin: 0;
+            font-family: "Helvetica Neue","Microsoft Yahei",Helvetica,Arial,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+        }
         .modalCont{
             padding-left: 15px;
             padding-top: 20px;
@@ -16,18 +19,18 @@
         .title{
             color: #333;
             font-size: 15px;
-            padding-right: 22px;
-            width: 100px;
+            padding-right: 12px;
+            width: 82px;
             text-align: right;
             display: inline-block;
         }
         .selectItem{
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         .selectItem input{
             width: 175px;
-            height: 32px;
-            line-height: 32px;
+            height: 28px;
+            line-height: 28px;
             padding: 10px;
             box-sizing: border-box;
             border: 1px #E5E5E5 solid;
@@ -47,7 +50,7 @@
             font-size: 14px;
             color: #666;
             width: 175px;
-            height: 136px;
+            height: 156px;
             overflow-y: auto;
         }
         .classItem{
@@ -82,7 +85,7 @@
             border-left:1px #fff solid;
             border-bottom: 1px #fff solid;
             top:2px;
-            left: 2px;
+            left: 1px;
             -webkit-transform: rotate(310deg);
             -moz-transform: rotate(310deg);
             -ms-transform: rotate(310deg);
@@ -93,15 +96,23 @@
             border: 0;
             background-color: #0084FF;
             color: #fff;
-            font-size: 16px;
-            padding: 9px 0;
-            -webkit-border-radius: 2px;
-            -moz-border-radius: 2px;
-            border-radius: 2px;
+            font-size: 15px;
+            padding: 10px 0;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
             margin: 30px auto 0;
             text-align: center;
             width: 150px;
             cursor: pointer;
+            line-height:1
+        }
+        input{
+            outline: none;
+        }
+        input:focus {
+            box-shadow: 0px 0px 2px #215bef8a;
+            border-color: #1757FB;
         }
     </style>
 </head>
@@ -112,7 +123,7 @@
             <span class="title">课程名称</span> <input class="courseInput" id="title"/>
         </div>
         <div class="selectItem">
-            <span class="title">邀请码</span> <input id="password"/>
+            <span class="title" style="letter-spacing: 5px">邀请码</span> <input id="password"/>
         </div>
         <div class="myFlex">
             <span class="title">选择班级</span>
