--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -48,17 +48,14 @@
 <script type="application/javascript" src="js/service.js"></script>
 <script>
     $(function () {
-        $('body').css({height: $(window).height()});
+        //$('body').css({height: $(window).height()});
 
 
         var teacherId = Service.getQueryString("teacherId");
         var teacherName = Service.getQueryString("teacherName");
         getUserById();
-
-//        $('#classInfo_iframe').attr('src', 'http://127.0.0.1:5000/schoolClass/unionClassList.html?teacherId=' + teacherId + '&teacherName=' + teacherName + '')
-         $('#classInfo_iframe').attr('src','https://www.maaee.com/openvidu/schoolClass/unionClassList.html?teacherId='+teacherId+'&teacherName='+teacherName+'')
-         $('#myFile_iframe').attr('src','https://jiaoxue.maaee.com:8099/#/antPlate?ident='+teacherId+'&fileId=-1&title=蚁盘题目&phoneType=0')
-//        $('#myFile_iframe').attr('src', 'http://192.168.50.29:8091/#/antPlate?ident=' + teacherId + '&fileId=-1&title=蚁盘题目&phoneType=0')
+        $('#classInfo_iframe').attr('src','unionClassList.html?teacherId='+teacherId+'&teacherName='+teacherName+'')
+        $('#myFile_iframe').attr('src','https://jiaoxue.maaee.com:8099/#/antPlate?ident='+teacherId+'&fileId=-1&title=蚁盘题目&phoneType=0')
         $('#classInfo').on('click', function () {
             $('#classInfo').addClass('active');
             $('#myFile').removeClass('active');
