--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -14,33 +14,53 @@
             margin: 0;
             background-color: #ECEFF8;
             overflow: hidden;
-            height: 100%;
+            height: 100vh;
+            font-family: "Helvetica Neue","Microsoft Yahei",Helvetica,Arial,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+        }
+        .layui-layer{
+            box-shadow: 0px 6px 50px rgba(0,0,0,0.4) !important;
         }
         .layui-layer-shade{
-            opacity: 0.5 !important;
+            opacity: 0 !important;
         }
         .layui-layer-title{
-            font-size: 16px !important;
+            font-size: 15px !important;
         }
         .topDiv{
             overflow: hidden;
+            padding: 15px  36px 15px  30px;
+            position:relative;
+        }
+        .topDiv:after{
+            position: absolute;
+            content: "";
+            width: 100%;
             border-bottom: 1px #E6E6E6 solid;
-            padding: 15px  36px 15px  40px;
+            -webkit-transform: translateY(-50%);
+            -moz-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            -o-transform: translateY(-50%);
+            transform: translateY(-50%);
+            bottom: 0;
+            left: 0;
         }
         .topDiv h1{
             color: #333333;
             font-size: 22px;
             float: left;
             margin: 0;
+            line-height: 1;
+            font-weight: bold;
+            padding-top: 7px;
         }
         .courseBtn{
             font-size: 14px;
-            padding: 0 17px 0 35px;
-            height: 34px;
-            line-height: 34px;
+            padding: 9px 17px 0 35px;
+            height: 24px;
+            line-height: 1;
             color:#fff;
-            background: #4285F4 url("img/icon_add_course1.png") no-repeat 14px 9px;
-            background-size: 14px;
+            background: #4285F4 url("img/icon_add_course1.png") no-repeat 14px 10px;
+            background-size: 12px;
             -webkit-border-radius: 17px;
             -moz-border-radius: 17px;
             border-radius: 4px;
@@ -49,8 +69,9 @@
         }
         #item_container{
             height: calc(100% - 65px);
+            overflow-x: hidden;
             overflow-y: scroll;
-            padding-left: 40px;
+            padding-left: 30px;
             padding-right: 20px;
         }
         .item{
@@ -59,7 +80,7 @@
             color: #333;
             font-size: 15px;
             line-height: 20px;
-            padding: 44px 0 20px 0;
+            padding: 36px 0 20px 0;
             margin-top: 42px;
             background-color: white;
             margin-bottom: 15px;
@@ -69,11 +90,11 @@
             background-color: #C4DAFF;
             color: #333;
             position: absolute;
-            top: -66px;
+            top: -58px;
             left: 0;
-            width: 505px;
+            width: 70%;
             border-radius: 4px;
-            line-height: 48px;
+            line-height: 40px;
             padding: 0 22px;
             box-sizing: border-box;
             text-overflow: ellipsis;
@@ -81,7 +102,7 @@
             overflow: hidden;
         }
         #main_teacher_name,#union_teacher_name{
-            margin-bottom: 16px;
+            margin-bottom: 12px;
         }
         #loading{
             font-size: 14px;
@@ -117,10 +138,10 @@
             right: 0;
             top: 50%;
             color: #fff;
-            width: 118px;
-            line-height: 42px;
-            font-size: 16px;
-            padding-left: 31px;
+            width: 100px;
+            line-height: 34px;
+            font-size: 14px;
+            padding-left: 24px;
             box-sizing: border-box;
             -webkit-transform: translateY(-50%);
             -moz-transform: translateY(-50%);
@@ -284,7 +305,7 @@
             title: '开启一个联合开课',
             shadeClose: true,
             shade: 0.8,
-            area: ['400px', '438px'],
+            area: ['330px', '400px'],
             content: 'openUnionClass.html?teacherId='+teacherId+"&userName="+teacherName
         });
     }
@@ -295,7 +316,7 @@
             title: '进入课堂验证',
             shadeClose: true,
             shade: 0.8,
-            area: ['400px', '379px'],
+            area: ['330px', '400px'],
             content: 'joinDialog.html?teacherId='+teacherId+"&vid="+vid
         });
     }
