--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -68,8 +68,27 @@
                 var messageData = info.data;
                 if (command == "office2PdfSuccess" && messageData.createUid == teacherId) {
                     var cloudFileName = messageData.cloudFileName;
-                    var tipMessage = "\""+cloudFileName+"\"已经转码成功!";
-                    layer.alert(tipMessage);
+                    var tipMessage = "课件\""+cloudFileName+"\"已经转码成功!";
+                    var tipMessageHTML = "<div class='classText'>"+tipMessage+"</div>";
+                    layer.open({
+                        type: 1,
+                        shade: false,
+                        closeBtn: 0,
+                        title: false, //不显示标题
+                        time: 300000, //2秒后自动关闭
+                        content: tipMessageHTML, //捕获的元素，注意：最好该指定的元素要存放在body最外层，否则可能被其它的相对元素所影响
+                    });
+                    /*layer.open({
+                        type: 1,
+                        title: false,
+                        closeBtn: 0,
+                        shadeClose: true,
+                        skin: 'yourclass',
+                        area: ['100%', '50px'],
+                        time: 3000000, //2秒后自动关闭
+                        offset: 'ct', //右下角弹出
+                        content: tipMessageHTML
+                    });*/
                 }
             }
         };
