--- a/public/schoolClass/videoSourceInClass.html
+++ b/public/schoolClass/videoSourceInClass.html
@@ -11,6 +11,14 @@
     <script type="application/javascript" src="../openvidu-browser-2.4.0.js"></script>
     <script type="text/javascript" src="../ExRTCSDK-2.4.0.js"></script>
     <script type="text/javascript" src="js/service.js"></script>
+    <style type="text/css">
+        .layui-layer-shade{
+            opacity: 0 !important;
+        }
+        .layui-layer{
+            box-shadow: 0px 6px 50px rgba(0,0,0,0.4) !important;
+        }
+    </style>
 </head>
 <body>
 
