--- a/public/schoolClass/videoSourceRtspInClass.html
+++ b/public/schoolClass/videoSourceRtspInClass.html
@@ -12,10 +12,20 @@
     <script type="text/javascript" src="../ExRTCSDK-2.4.0.js"></script>
     <script type="text/javascript" src="js/service.js"></script>
     <script type="application/javascript" src="https://jsmpeg.com/jsmpeg.min.js"></script>
+    <style type="text/css">
+        .layui-layer-shade{
+            opacity: 0 !important;
+        }
+        .layui-layer{
+            box-shadow: 0px 6px 50px rgba(0,0,0,0.4) !important;
+        }
+    </style>
 </head>
 <body>
 
- <canvas width="230px" height="127px" autoplay id="rtsp_preview_canvas"></canvas>
+<div class="videoSourceInClass-video">
+        <canvas width="230px" height="127px" autoplay id="rtsp_preview_canvas"></canvas>
+</div>
 
 </body>
 
