--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -14,11 +14,10 @@
             background-color: #ECEFF8;
             overflow: hidden;
             height: 100vh;
-            font-family: "Helvetica Neue","Microsoft Yahei",Helvetica,Arial,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+            font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
         }
         .layui-layer{
             box-shadow: 0px 6px 50px rgba(0,0,0,0.4) !important;
-            height: 100%;
             font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
         }
         .layui-layer-shade{
