--- a/public/schoolClass/openUnionClass.html
+++ b/public/schoolClass/openUnionClass.html
@@ -114,6 +114,9 @@
             box-shadow: 0px 0px 2px #215bef8a;
             border-color: #1757FB;
         }
+        .layer-anim{
+            animation:none !important;
+        }
     </style>
 </head>
 <body>
