--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -19,6 +19,7 @@
         .layui-layer{
             box-shadow: 0px 6px 50px rgba(0,0,0,0.4) !important;
             font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
+            animation: none !important;
         }
         .layui-layer-shade{
             opacity: 0 !important;
@@ -171,6 +172,9 @@
             text-align: center;
             padding-top: 10px;
             letter-spacing: 0.5px;
+        }
+        .layer-anim{
+            animation:none !important;
         }
 
     </style>
