--- a/public/schoolClass/videoSourceRtspInClass.html
+++ b/public/schoolClass/videoSourceRtspInClass.html
@@ -19,6 +19,9 @@
         .layui-layer{
             box-shadow: 0px 6px 50px rgba(0,0,0,0.4) !important;
         }
+        .layer-anim{
+            animation:none !important;
+        }
     </style>
 </head>
 <body>
