--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -83,7 +83,7 @@
 		</div> 
        
         <div class="video_operation_menu video_center">
-            <a id="apply_lianmai" href="javascript:applyForMai();" string_id='string_shenqing_lianmai'>申请连麦</a>
+            <a id="apply_lianmai" href="javascript:applyForMai();" string_id='string_shenqing_lianmai' style="margin:0 0 0 79px">申请连麦</a>
         </div>
     </div>
    	
