--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>用户登录</title>
+    <title>同步课堂登录</title>
+    <link rel="icon" href="img/logo_title.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo_title.png" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/login.css">
     <script type="application/javascript" src="js/platform.js"></script>
 </head>
