--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>同步课堂</title>
+    <link rel="icon" href="img/logo_title.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo_title.png" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/syncClassroom.css">
 </head>
 <body>
